tests/baselines/reference/mappedTypeNoTypeNoCrash(strict=true).errors.txt
mappedTypeNoTypeNoCrash.ts(1,15): error TS7039: Mapped object type implicitly has an 'any' template type.
mappedTypeNoTypeNoCrash.ts(1,51): error TS2304: Cannot find name 'K'.
mappedTypeNoTypeNoCrash.ts(1,51): error TS4081: Exported type alias 'T0' has or is using private name 'K'.
mappedTypeNoTypeNoCrash.ts(1,57): error TS2304: Cannot find name 'K'.
mappedTypeNoTypeNoCrash.ts(1,57): error TS4081: Exported type alias 'T0' has or is using private name 'K'.


==== mappedTypeNoTypeNoCrash.ts (5 errors) ====
    type T0<T> = ({[K in keyof T]}) extends ({[key in K]: T[K]}) ? number : never;
                  ~~~~~~~~~~~~~~~~
!!! error TS7039: Mapped object type implicitly has an 'any' template type.
                                                      ~
!!! error TS2304: Cannot find name 'K'.
                                                      ~
!!! error TS4081: Exported type alias 'T0' has or is using private name 'K'.
                                                            ~
!!! error TS2304: Cannot find name 'K'.
                                                            ~
!!! error TS4081: Exported type alias 'T0' has or is using private name 'K'.